# fyspoti

./: .gitignore  Cargo.toml  README.md  build.rs
src/: codec.rs  consts.rs  dh.rs  handshake.rs  http.rs  main.rs
src/protocol/: authentication.rs  keyexchange.rs  mercury.rs  mod.rs
