[package]
name = "fyspoti"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
reqwest = { version = "0.12", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x25519-dalek = { version = "2", features = ["getrandom"] }
rand = "0.9"
protobuf = "3"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

[build-dependencies]
protobuf-codegen = "3"
