[package]
name = "fyspoti"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
protobuf = "3"
rand = "0.9"
reqwest = { version = "0.12", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shannon = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

[build-dependencies]
protobuf-codegen = "3"
