[package]
name = "fyspoti"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
hmac = "0.12"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
protobuf = "3"
rand = "0.9"
reqwest = { version = "0.12", features = ["native-tls"] }
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", features = ["oid"] }
shannon = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "bilock",
    "unstable",
    "sink",
] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1", default-features = false, features = ["v4"] }

[build-dependencies]
protobuf-codegen = "3"
